# bevy_adventure

./: Cargo.toml  README.md
examples/: main.rs
examples/assets/scenes/: bathroom.glb  bedroom.glb  hallway.glb
src/: animation.rs  audio.rs  commands.rs  constants.rs  cursor.rs  inventory.rs  lib.rs  plugin.rs  scene.rs  state.rs  textdisplay.rs
src/camera/: back.rs  ignores.rs  mod.rs  next.rs  plugin.rs  spot.rs
src/interactives/: actions.rs  hovering.rs  interact.rs  mod.rs  plugin.rs  ray.rs  simple.rs  system.rs  systems.rs  util.rs
