[package]
name = "bevy_adventure"
version = "0.0.1"
edition = "2021"
description = "A framework for building adventure games in Bevy."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/bevy_adventure"

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
bevy = { version = "0.9", features = ["jpeg"] }

[dependencies]
bevy = "0.9"
bevy_mod_raycast = "0.7"
bevy_rapier3d = "0.19"
iyes_loopless = "0.9"
serde = { version = "1.0", optional = true }